--- a/redmine_project_workflow_extension/app/views/graph/burndown.html.erb
+++ b/redmine_project_workflow_extension/app/views/graph/burndown.html.erb
@@ -92,8 +92,8 @@ chart = new Highcharts.Chart({
     }
   },
   series: [
-          { name: "Odhadovana doba", data: [ <%= print_chart_line(@ideal_line) %> ] },
-          { name: "Skutecna doba", data: [ <%= print_records(@current_line) %> ]}
+          { name: "<%= l(:label_chart_estimated_time) %>", data: [ <%= print_chart_line(@ideal_line) %> ] },
+          { name: "<%= l(:label_chart_total_time) %>", data: [ <%= print_records(@current_line) %> ]}
         ]
   });
 });
