--- a/redmine_project_workflow_extension/app/views/graph/issue_status.html.erb
+++ b/redmine_project_workflow_extension/app/views/graph/issue_status.html.erb
@@ -8,7 +8,7 @@
 
 
 <script type="text/javascript">
-document.observe('dom:loaded', function(){
+$(function(){
         Highcharts.getOptions().colors = Highcharts.map(Highcharts.getOptions().colors, function(color) {
         return {
             radialGradient: { cx: 0.5, cy: 0.3, r: 0.7 },
