--- a/redmine_project_workflow_extension/app/views/graph/burndown.html.erb
+++ b/redmine_project_workflow_extension/app/views/graph/burndown.html.erb
@@ -8,11 +8,11 @@
     <ul>
       <% @versions.each do |version| %>
         <li>
-          <%= link_to_remote version.name, { :url => { :controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'version', :id => version.id } } %>
+          <%= link_to version.name, { :url => { :controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'version', :id => version.id } }, :remote => true %>
         </li>
       <% end %>
       <li>
-        <%= link_to_remote l(:label_draw_all), { :url => {:controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'version', :id => 'all' } } %>
+        <%= link_to l(:label_draw_all), { :url => {:controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'version', :id => 'all' } }, :remote => true %>
       </li>
     </ul>
   <% end %>
@@ -21,11 +21,11 @@
     <ul>
       <% @milestones.each do |milestone| %>
         <li>
-          <%= link_to_remote milestone.name, { :url => { :controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'milestone', :id => milestone.id } } %>
+          <%= link_to milestone.name, { :url => { :controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'milestone', :id => milestone.id } }, :remote => true %>
         </li>
       <% end %>
       <li>
-        <%= link_to_remote l(:label_draw_all), { :url => {:controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'milestone', :id => 'all' } } %>
+        <%= link_to l(:label_draw_all), { :url => {:controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'milestone', :id => 'all' } }, :remote => true %>
       </li>
     </ul>
   <% end %>
@@ -34,11 +34,11 @@
     <ul>
       <% @iterations.each do |iteration| %>
         <li>
-          <%= link_to_remote iteration.name, { :url => { :controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'iteration', :id => iteration.id } } %>
+          <%= link_to iteration.name, { :url => { :controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'iteration', :id => iteration.id } }, :remote => true %>
         </li>
       <% end %>
       <li>
-        <%= link_to_remote l(:label_draw_all), { :url => {:controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'iteration', :id => 'all' } } %>
+      <%= link_to l(:label_draw_all), { :url => {:controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'iteration', :id => 'all' } }, :remote => true %>
       </li>
     </ul>
   <% end %>
@@ -48,7 +48,7 @@
 
 <script type="text/javascript">
 var chart;
-document.observe('dom:loaded', function(){
+$(function(){
     var $tooltip = $('tooltip');
     $tooltip.hide();
     var $text = $('tooltiptext');
