Move total time to project, remove init burndown record (created manually), split burndown and burnup

--- a/redmine_project_workflow_extension/app/views/graph/_sidebar.html.erb
+++ b/redmine_project_workflow_extension/app/views/graph/_sidebar.html.erb
@@ -1,4 +1,5 @@
 <h3><%= l(:label_charts_menu) %></h3>
 
 <%= link_to l(:label_burndown_chart), { :controller => :graph, :action => :burndown } %><br />
+<%= link_to l(:label_burnup_chart), { :controller => :graph, :action => :burnup } %><br />
 <%= link_to l(:label_issue_status_chart), { :controller => :graph, :action => :issue_status } %><br />
