--- a/redmine_project_workflow_extension/app/views/graph/burnup.html.erb
+++ b/redmine_project_workflow_extension/app/views/graph/burnup.html.erb
@@ -2,60 +2,20 @@
 
 <% content_for :sidebar do %>
   <%= render 'sidebar' %>
-
-  <% if @versions.any? %>
-    <h3><%= l(:label_show_versions) %></h3>
-    <ul>
-      <% @versions.each do |version| %>
-        <li>
-          <%= link_to_remote version.name, { :url => { :controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'version', :id => version.id } } %>
-        </li>
-      <% end %>
-      <li>
-        <%= link_to_remote l(:label_draw_all), { :url => {:controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'version', :id => 'all' } } %>
-      </li>
-    </ul>
-  <% end %>
-  <% if @milestones.any? %>
-    <h3><%= l(:label_show_milestones) %></h3>
-    <ul>
-      <% @milestones.each do |milestone| %>
-        <li>
-          <%= link_to_remote milestone.name, { :url => { :controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'milestone', :id => milestone.id } } %>
-        </li>
-      <% end %>
-      <li>
-        <%= link_to_remote l(:label_draw_all), { :url => {:controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'milestone', :id => 'all' } } %>
-      </li>
-    </ul>
-  <% end %>
-  <% if @iterations.any? %>
-    <h3><%= l(:label_show_iterations) %></h3>
-    <ul>
-      <% @iterations.each do |iteration| %>
-        <li>
-          <%= link_to_remote iteration.name, { :url => { :controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'iteration', :id => iteration.id } } %>
-        </li>
-      <% end %>
-      <li>
-        <%= link_to_remote l(:label_draw_all), { :url => {:controller => :graph, :action => :show_plot_band, :project_id => @project, :type => 'iteration', :id => 'all' } } %>
-      </li>
-    </ul>
-  <% end %>
 <% end %>
 
 <h2><%= l(:label_burnup_chart) %></h2>
 
 <script type="text/javascript">
 var chart;
-document.observe('dom:loaded', function(){
-    var $tooltip = $('tooltip');
+$(function(){
+    var $tooltip = $('#tooltip');
     $tooltip.hide();
-    var $text = $('tooltiptext');
+    var $text = $('#tooltiptext');
     displayTooltip = function (text, left) {
-        $text.innerText = text;
+        $text.html(text);
         $tooltip.show();
-        $tooltip.attributes['style'].value = 'left: ' + parseInt(left)  + 'px';
+        $tooltip.attr['style'] = 'left: ' + parseInt(left)  + 'px';
     };
     var timer;
     hideTooltip = function (e) {
